# ree-pak-gui

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  README.md  components.d.ts  env.d.ts  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1723133472074-56f63cbe4fd6b.mjs  vite.config.ts.timestamp-1730366274444-24d78c0e52645.mjs
.ace/: index.json
.agents/skills/shadcn-vue/assets/: nuxt.config.ts  tailwind.css
.agents/skills/shadcn-vue/scripts/: generate-components.ts
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: .gitignore  buildModelInsightWasm.js  copyModelInsightWasm.js  generateFilelistIndex.py  generateUpdates.py  packageUpdateArtifact.js
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: core.json  dialog.json  fs.json  http.json  migrated.json  opener.json
src-tauri/crates/model-insight-wasm/: .gitignore  Cargo.toml
src-tauri/crates/model-insight-wasm/src/: lib.rs  preview.rs  read.rs  wasm.rs
src-tauri/crates/model-insight-wasm/src/formats/: mdf.rs  mesh.rs  mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: channel.rs  command.rs  common.rs  error.rs  event.rs  external_tools.rs  filename.rs  logger.rs  macros.rs  main.rs  path_components.rs  usecase.rs  utility.rs
src-tauri/src/pak/: group.rs  mod.rs  tree.rs  unpack.rs
src-tauri/src/service/: audio.rs  filelist.rs  mod.rs  model_insight.rs  pak.rs  preview.rs  tools.rs  update.rs
src-tauri/src/service/audio/: container.rs  export.rs  mod.rs
src-tauri/tests/: release_archive.rs  texture_export_memory.rs
src-tauri/tests_support/: texture_export_support.rs
src/api/http/: filelist.ts  update.ts  vgmstream.ts
src/api/tauri/: filelist.ts  pak.ts  tools.ts  update.ts  utils.ts
src/components/: DesktopMenuBar.vue  DesktopTabPanels.vue  DesktopTabs.vue  FileConflict.vue  FileNameTableSelector.vue  FileTree.vue  HoverBubble.vue  LanguageSelect.vue  Menu.vue  PageToolbar.vue  PakFileItem.vue  PakFiles.vue  PreviewPane.vue  SettingsDrawer.vue  SplitPanel.vue  SystemLogPanel.vue  TaskProgressPanel.vue  UpdateDialog.vue
src/components/FileNameTable/: FileNameTable.vue  FileNameTableSelector.vue
src/components/Settings/: Settings.vue  SettingsInlineItem.vue  SettingsItem.vue  SettingsItemSwitch.vue  VgmstreamExtensionManager.vue
src/components/context-menu/: AppContextMenu.vue  AppContextMenuItems.vue  AppCursorContextMenu.vue  AppDropdownMenuItems.vue
src/components/explorer/: VirtualExplorerGrid.vue  VirtualExplorerList.vue
src/components/fileNameTable/: FileNameTable.vue  FileNameTableSelector.vue
src/components/settings/: Settings.vue  SettingsItem.vue  SettingsItemSwitch.vue  SettingsSwitch.vue
src/components/tools/: PathScanner.vue  index.ts
src/components/ui/context-menu/: ContextMenuSubTrigger.vue
src/components/ui/dialog/: DialogContent.vue  DialogFooter.vue  DialogScrollContent.vue
src/components/ui/input/: DenseInput.vue  index.ts
src/components/ui/menubar/: Menubar.vue  MenubarContent.vue  MenubarItem.vue  MenubarMenu.vue  MenubarTrigger.vue  index.ts
src/components/ui/sheet/: SheetContent.vue
src/components/unpack/: UnpackAudioBankPreview.vue  UnpackExplorerDetailsView.vue  UnpackExplorerPane.vue  UnpackExplorerTileView.vue  UnpackModelPreview.vue  UnpackPreviewModePane.vue  UnpackPropertiesDialog.vue  UnpackSidebarTabs.vue
src/composables/: theme.ts  useAudioBankExportProgress.ts
src/config/: tools.ts
src/http/: download.ts
src/i18n/: en_US.ts  zh_CN.ts
src/lib/: NameListFile.ts  audioBank.ts  bufread.ts  contextMenu.ts  explorerTypeTheme.ts  language.ts  packer.ts  pathScanner.ts  reAssetPath.ts  read.ts  releaseMarkdown.ts  unpackExplorer.ts  unpackExplorerPreview.test.js  unpackExplorerPreview.ts  unpackExplorerSelection.test.js  unpackExplorerSelection.ts  unpackTree.test.js  unpackTree.ts
src/lib/http/: download.ts
src/lib/localDir/: index.ts
src/lib/modelInsight/: bytes.ts  loader.ts  previewRenderer.ts  textures.ts  wasm.ts  webglRenderer.ts
src/pages/: PackView.vue  RepackView.vue  SettingsView.vue  ToolsView.vue  UnpackView.vue
src/plugins/: i18n.ts  index.ts  system.ts  vuetify.ts
src/router/: index.ts
src/service/: filelist.ts  taskProgress.ts  update.ts  vgmstream.ts
src/store/: filelist.ts  project.ts  recent.ts  settings.ts  system.ts  unpack.ts  update.ts  work.ts
src/styles/: global.css  settings.scss
src/utils/: frontendLog.ts  hash.ts  message.ts  path.test.js  path.ts  systemLog.ts
src/wasm/model-insight/: .gitignore  README.md  model_insight.d.ts  model_insight.js  model_insight_bg.wasm  model_insight_bg.wasm.d.ts
