[package]
name = "app"
version = "0.6.0"
description = "RE Engine Package Tools"
authors = ["Eigeen <dengyk2002@qq.com>"]
license = "MIT"
repository = "https://github.com/eigeen/ree-pak-rs"
default-run = "app"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "crates/model-insight-wasm"]
resolver = "3"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
# local dev
# ree-pak-core = { path = "../../ree-pak-rs/ree-pak-core" }

ree-pak-core = { git = "https://github.com/eigeen/ree-pak-rs", rev = "5988312", package = "ree-pak-core" }
re-tex = { git = "https://github.com/eigeen/re-tex", rev = "05e8263" ,features = ["image"] }
re-sound = { git = "https://github.com/eigeen/re-sound", rev = "8db762d", package = "re-sound" }

tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = { version = "2.5.9", features = ["json", "brotli", "gzip"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"

serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
anyhow = "1.0.102"
thiserror = "2.0.18"
rustc-hash = "2.1.2"
nohash = "0.2.0"
rayon = "1.12.0"
log = { version = "0.4.29", features = ["std"] }
parking_lot = "0.12.5"
tokio = "1.52.2"
self_update = { version = "0.44.0", features = ["archive-zip", "compression-flate2"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
tempfile = "3.27.0"
chrono = "0.4.44"
sha2 = "0.11.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
indexmap = "2.14.0"
walkdir = "2.5.0"
# for preview
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "rayon",
] }
smol_str = { version = "0.3.6", features = ["serde"] }
hashbrown = { version = "0.17.0", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

nightly = []
