[package]
name = "model-insight-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lib]
name = "model_insight"
crate-type = ["rlib", "cdylib"]

[dependencies]
byteorder = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
